--- a/app/template/include/b-callback.html
+++ b/app/template/include/b-callback.html
@@ -1,7 +1,7 @@
 <section class="b-callback">
-    <form action="mail.php" method="post" name="ContactForm">
-        <input class="field" placeholder="Ваше имя" type="text" name="name" required/>
-        <input class="field" placeholder="Ваш телефон" type="tel" name="tel" required />
+    <form class="form" action="mail.php" method="post" name="contactform">
+        <input class="field name" placeholder="Ваше имя" type="text" name="name" required/>
+        <input class="field tel" placeholder="Ваш телефон" type="tel" name="tel" required />
         <input class="send" type="submit" name="submit" value="Заказать звонок" />
     </form>
 </section>
