--- a/app/template/include/header.html
+++ b/app/template/include/header.html
@@ -2,24 +2,25 @@
     <div class="row top-line">
         <div class="col-xs-6 col-xs-offset-0 col-sm-2 col-sm-offset-0 col-md-1 col-md-offset-1 col-lg-1 col-lg-offset-2">
             <a href="http://cdls.by/" class="logo">
-            <img src="img/logo.png" alt="logo" />
+                <img src="img/logo.png" alt="logo" />
             </a>
         </div>
-        <div class="menu-title col-xs-6" onclick="dropMenu()">меню</div>
+        <div class="menu-title col-xs-6">меню</div>
         <nav id="nav" class="col-xs-12 col-sm-10 col-md-9 col-lg-7">
             <a href="#servers" id="list">Как&nbsp;выбрать</a>
-            <a href="#slider">Серверы</a>
+            <a href="#configurator">Серверы</a>
             <a href="#howto">Почему&nbsp;мы</a>
             <a href="#contacts">Контакты</a>
         </nav>
     </div>
-    
+
     <div class="row banner">
         <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
             <h1>Cерверное оборудование</h1>
-            <h2>Выберите сервер Lenovo или Asus с учетом своих задач и бюджета, систему хранения под ваши данные, а также сетевые компоненты, удовлетворяющие вашим требованиям</h2>
-            <form action="mail.php" method="post" name="ContactForm">
-                <input class="field" placeholder="Ваш телефон" type="tel" name="tel" required />
+            <h2>Выберите сервер Lenovo или Asus с учетом своих задач и бюджета, систему хранения под ваши данные, а также сетевые
+                компоненты, удовлетворяющие вашим требованиям</h2>
+            <form class="form" action="mail.php" method="post" name="contactform">
+                <input class="field tel" placeholder="Ваш телефон" type="tel" name="tel" required />
                 <input class="send" type="submit" name="submit" value="Заказать звонок" />
             </form>
         </div>
