--- a/app/template/include/b-contacts.html
+++ b/app/template/include/b-contacts.html
@@ -3,16 +3,19 @@
     <h2>Контакты</h2>
     <span class="line blue"></span>
     <div class="col-xs-12 col-sm-4">
-        <span>Корпоративный&nbsp;стандарт</span>   
+        <span>Корпоративный&nbsp;стандарт</span>
     </div>
     <div class="col-xs-12 col-sm-4">
-        <span>тел.:&nbsp;+375&nbsp;44&nbsp;776-04-30</span>   
+        <span>тел.:&nbsp;+375&nbsp;44&nbsp;776-04-30</span>
     </div>
     <div class="col-xs-12 col-sm-4">
-        <span><a href="mailto: k.standart@cdls.by">email:&nbsp;k.standart@cdls.by</a></span>
+        <span>
+            <a href="mailto: k.standart@cdls.by">email:&nbsp;k.standart@cdls.by</a>
+        </span>
     </div>
 
 </section>
 <section>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13271.19221053495!2d27.67519151343001!3d53.9843578405214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbc8fbdc9bf071%3A0x723dfc52cedb22cf!2z0KfQnyDQmtC-0YDQv9C-0YDQsNGC0LjQstC90YvQuSDRgdGC0LDQvdC00LDRgNGC!5e0!3m2!1sru!2sru!4v1465928753609" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13271.19221053495!2d27.67519151343001!3d53.9843578405214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbc8fbdc9bf071%3A0x723dfc52cedb22cf!2z0KfQnyDQmtC-0YDQv9C-0YDQsNGC0LjQstC90YvQuSDRgdGC0LDQvdC00LDRgNGC!5e0!3m2!1sru!2sru!4v1465928753609"
+        width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 </section>
